Ensure all icons are the same size and align; nits

--- a/src/components/shared/ResultList.css
+++ b/src/components/shared/ResultList.css
@@ -26,6 +26,7 @@
   padding: 10px;
   flex-direction: row;
   border-bottom: 1px solid var(--theme-splitter-color);
+  line-height: 18px;
 }
 
 .result-list.small li {
@@ -64,8 +65,17 @@
   background-color: var(--theme-selection-color);
 }
 
+.result-list li .result-item-icon.tab {
+  mask-size: 150%;
+  mask-position: 0 2px;
+}
+
+.result-list li img.result-item-icon {
+  width: 16px;
+  height: 16px;
+}
+
 .result-list li .title {
-  line-height: 1.5em;
   word-break: break-all;
   text-overflow: ellipsis;
   white-space: nowrap;
